@@ -18,6 +18,7 @@ Changes in @NEW@:
     * The --signatures and --buildreqs flags now work with conary
       showcs.  (CNY-642)
     * Fixed a bug in the NetworkRepositoryClient default pwPrompt mechanism.
+    * Improved error messages when entitlements fail to load (CNY-662)
 
 Changes in 1.0.23:
   o API Additions:
